@@ -1,5 +1,7 @@
 *SVN*
 
+* Major improvement to the documentation for the options / select form helpers. Closes #9038 [kampers, jardeon, wesg]
+
 * Fix number_to_human_size when using different precisions. Closes #7536. [RichardStrand, mpalmer]
 
 * Added partial layouts (see example in action_view/lib/partials.rb) [DHH]
